--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "lucyofm-bot",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Bot-ul LucyOFM pentru analize și predicții",
+  "main": "index.js",
   "scripts": {
-    "dev": "vercel dev"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "openai": "^4.52.7"
+    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "openai": "^4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
