--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,21 @@
 {
-  "name": "LucyOFM – Analize meciuri",
+  "name": "LucyOFM Bot",
   "short_name": "LucyOFM",
-  "description": "Analizează meciuri de fotbal în 10 puncte.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0d1117",
-  "theme_color": "#0d1117",
+  "background_color": "#ffffff",
+  "theme_color": "#2d89ef",
+  "description": "Bot pentru analiză în 10 puncte a meciurilor de fotbal",
   "icons": [
-    { "src": "/icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/icon-512x512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
