--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "lucyofm-bot",
   "version": "1.0.0",
-  "description": "LucyOFM Bot",
-  "main": "index.js",
+  "description": "Bot pentru analiză de meciuri în 10 puncte",
   "scripts": {
-    "start": "node index.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
-  },
-  "engines": {
-    "node": ">=18"
+    "next": "13.4.19",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
