--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
     "api/chat.js": {
       "runtime": "nodejs18.x"
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" }
+  ]
 }
