--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-  "functions": {
-    "api/chat.js": {
-      "runtime": "nodejs18.x"
-    }  
-  },
-  "rewrites": [
-    { "source": "/", "destination": "/index.html" }
+  "version": 2,
+  "builds": [
+    { "src": "api/*.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
