--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
+// vercel.json
 {
   "version": 2,
-  "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" }
-  ],
+  "functions": {
+    "api/chat.js": { "runtime": "nodejs18.x" }
+  },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "handle": "filesystem" },
+    { "src": "/api/chat", "dest": "/api/chat.js" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
