--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,19 +3,10 @@
   "short_name": "LucyOFM",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#2d89ef",
-  "description": "Bot pentru analiză în 10 puncte a meciurilor de fotbal",
+  "background_color": "#0e0e0e",
+  "theme_color": "#0066ff",
   "icons": [
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/icon-512x512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
