--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "api/chat.js", "use": "@vercel/node" }
+  ],
   "routes": [
-    { "src": "/api/chat", "dest": "/api/chat.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/api/chat", "dest": "api/chat.js" }
   ]
 }
