--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "lucyofm-bot",
   "version": "1.0.0",
-  "type": "module"
+  "dependencies": {
+    "openai": "^4.26.0",
+    "mongodb": "^6.5.0"
+  }
 }
