--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,8 @@
 {
-  "name": "LucyOFM7474 Bot",
+  "name": "LucyOFM Bot",
   "short_name": "LucyBot",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0d1117",
-  "theme_color": "#161b22",
-  "icons": [
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "background_color": "#ffffff",
+  "theme_color": "#007bff"
 }
