--- a/public/vercel.json
+++ b/public/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "routes": [
     { "src": "/api/chat", "dest": "/api/chat.js" },
+    { "src": "/", "dest": "/public/index.html" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
