--- a/public/vercel.json
+++ b/public/vercel.json
@@ -1,10 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "api/chat.js": { "runtime": "nodejs18.x" }
-  },
+  "builds": [
+    { "src": "api/chat.js", "use": "@vercel/node" }
+  ],
   "routes": [
-    { "src": "/api/chat", "dest": "/api/chat.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/api/chat", "dest": "/api/chat.js" }
   ]
 }
