--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,12 @@
-{
-  "name": "LucyOFM Bot",
-  "short_name": "LucyBot",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#007bff",
-  "icons": [
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
+"icons": [
+  {
+    "src": "/icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  },
+  {
+    "src": "/icon-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }
+]
