--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "lucyofm-functional-bot",
+  "name": "lucyofm-bot",
   "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
+  "scripts": {
+    "dev": "vercel dev",
+    "start": "vercel start"
+  },
   "dependencies": {
     "openai": "^4.26.0"
   }
