--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "api/chat.js": {
-      "runtime": "edge"
+  "builds": [
+    {
+      "src": "api/chat.js",
+      "use": "vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/chat",
