--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,6 @@
 {
-  "version": 2,
   "functions": {
-    "api/chat.js": {
-      "runtime": "nodejs18.x"
-    },
-    "api/history.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ]
+    "api/chat.js": { "runtime": "nodejs18.x" },
+    "api/history.js": { "runtime": "nodejs18.x" }
+  }
 }
