--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,20 @@
 {
   "version": 2,
   "functions": {
-    "api/chat.js": { "runtime": "nodejs18.x" },
-    "api/history.js": { "runtime": "nodejs18.x" }
+    "api/*.js": {
+      "runtime": "nodejs18.x"
+    }
   },
+  "builds": [
+    {
+      "src": "api/*.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1.js"
+    }
   ]
 }
