--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "builds": [
     {
       "src": "api/*.js",
-      "use": "@vercel/node@1.16.1"
+      "use": "@vercel/node"
     }
   ],
   "routes": [
