--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,1 +1,8 @@
-
+{
+  "name": "LucyOFM Bot",
+  "short_name": "LucyOFM",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#111",
+  "theme_color": "#0070f3"
+}
