--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "lucyofm-bot",
-  "version": "1.0.0",
   "type": "module",
   "dependencies": {
-    "mongoose": "^7.6.0"
+    "openai": "^4.52.7"
   }
 }
