--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,6 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
