--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
   "name": "lucyofm-mongodb-bot",
   "version": "1.0.0",
-  "dependencies": {}
+  "private": true,
+  "type": "commonjs",
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "dev": "node --watch api/chat.js",
+    "start": "node api/chat.js",
+    "test": "echo \"No tests yet\" && exit 0"
+  },
+  "dependencies": {
+    "axios": "^1.7.4",
+    "cheerio": "^1.0.0",
+    "mongodb": "^6.7.0",
+    "dayjs": "^1.11.13"
+  }
 }
