--- a/package.json
+++ b/package.json
@@ -1,21 +1,8 @@
 {
   "name": "lucyofm-bot",
   "version": "1.0.0",
-  "description": "LucyOFM – Analize Meciuri, cu GPT și MongoDB",
-  "main": "api/chat.js",
   "type": "commonjs",
-  "scripts": {
-    "start": "vercel dev",
-    "dev": "vercel dev",
-    "build": "echo 'Vercel build step'"
-  },
   "dependencies": {
-    "openai": "^4.0.0",
-    "mongodb": "^5.7.0",
-    "node-fetch": "^3.3.2"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "license": "MIT"
+    "openai": "^4.61.0"
+  }
 }
