--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "lucyofm-bot",
   "version": "1.0.0",
   "type": "commonjs",
+  "engines": { "node": ">=18" },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "mongodb": "^5.9.2",
     "openai": "^4.61.0"
+  },
+  "scripts": {
+    "build": "echo \"No build step\""
   }
 }
