--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "version": 2,
   "routes": [
-    { "src": "/", "dest": "/public/index.html" },
-    { "src": "/(.*)", "dest": "/api/$1" }
+    { "src": "^/api/chat$", "dest": "/api/chat.js" },
+    { "src": "^/api/fetchSources$", "dest": "/api/fetchSources.js" },
+
+    { "src": "^/$", "dest": "/public/index.html" },
+    { "src": "^(.*)$", "dest": "/public$1" }
   ]
 }
