--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "lucyofm-bot",
-  "private": true,
   "version": "1.0.0",
-  "type": "module",
-  "engines": { "node": ">=20" },
+  "description": "LucyOFM – Analize Meciuri",
+  "main": "index.js",
   "scripts": {
-    "build": "echo \"no build\""
+    "dev": "next dev",
+    "build": "echo \"no build\"",
+    "start": "next start"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.5",
-    "cheerio": "^1.0.0-rc.12"
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^5.9.0",
+    "node-fetch": "^3.3.2",
+    "puppeteer": "^22.4.1"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
