--- a/package.json
+++ b/package.json
@@ -1,27 +1,14 @@
 {
-  "name": "lucyofm-bot",
+  "name": "lucyofm-analize-meciuri",
   "version": "1.0.0",
-  "description": "LucyOFM – Analize Meciuri",
-  "main": "index.js",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "echo \"no build\"",
-    "start": "next start"
+    "dev": "vercel dev",
+    "build": "echo \"No build step\"",
+    "start": "vercel dev"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7",
-    "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongodb": "^5.9.0",
-    "node-fetch": "^3.3.2",
-    "puppeteer": "^22.4.1"
-  },
-  "engines": {
-    "node": "20.x"
+    "openai": "^4.52.0"
   }
 }
