--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
-    "start": "node api/chat.js"
+    "dev": "vercel dev"
   },
   "dependencies": {
     "openai": "^4.58.1"
