--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "lucyofm-bot",
-  "type": "module",
   "private": true,
   "dependencies": {
-    "mongodb": "^6.5.0",
+    "cheerio": "^1.0.0",
     "openai": "^4.52.7"
-  },
-  "engines": {
-    "node": ">=18.x"
   }
 }
