--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lucyofm-bot",
   "private": true,
   "dependencies": {
-    "cheerio": "^1.0.0",
-    "openai": "^4.52.7"
+    "openai": "^4.52.7",
+    "cheerio": "^1.0.0"
   }
 }
